trying to fix weird gap for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ label{
 @media (max-width: 800px) {
   body{
     width: 100%;
-    
+    margin: 0;
   }
   header { 
     
@@ -300,9 +300,7 @@ label{
     padding: 0;
     margin-top: 10%;
   }
-  html {
-    width: 100%; 
-  }
+
 }
 
 @media (max-width: 400px) {
